# Draco

./: .clang-format  .cmake-format.py  .codecov.yml  .gitlab-ci.yml  .travis-install-dependencies.sh  .travis-run-tests.sh  .travis.yml  CMakeLists.txt  CMakeSettings.json  CTestConfig.cmake  ChangeLog  LICENSE.md  Makefile.in  NEWS  README.draco  README.md  aclocal.m4  appveyor.yml  configure  configure.ac  configure.in  draco_config  export  get_tex  import
autodoc/: CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac  configure.in  doxygen_config.in  draco.config  draco.dcc  draco_release_process.dcc  footer.html  footer.html.in  header.html  header.html.in  mainpage.dcc  mainpage.dcc.in  software_development_policies.dcc  vendors.dcc
autodoc/html/: draco.css  footer.html  footer.html.in  header.html  header.html.in
doc/: Makefile.in  code.table  configure  configure.in
doc/ExpEngineTraits/: Makefile.in  UserVec.hh.cfg  UserVecTraits.hh.cfg  configure  configure.in  expTraits.cc  expTraits.cc.cfg  expTraits.hh.cfg  expTraits.tex
doc/GenericProgInSolon/: Makefile  Solon.bib  Solon.tex  Solonpreamble.tex  diff.uml.eps  diff.uml.fig  mesh.uml.eps  mesh.uml.fig  p13t.uml.eps  p13t.uml.fig
doc/MatrixFactory/: Makefile.in  configure  configure.in  matFactory.bib  matFactory.tex
doc/acf90/: acf90.tex  makefile
doc/autodoc/: Makefile  draco-autodoc.tex
doc/bib/: draco.bib
doc/code_stats/: coverage.sxc  coverage.xs5  loc.agr  loc.sxc  loc.xs5
doc/cygwin/: draco_cygwin.tex
doc/design/: code.table  design.memo  level.dot  level.ps
doc/draco-autodoc/: draco_autodoc.ps
doc/emacs/: Makefile  Test.cfg  Test.hh  draco-emacs.tex  emacs  tme-keys
doc/gettingStarted/: Makefile  bashrc  gettingStarted.tex
doc/gnats/: Makefile  draco-gnats.tex
doc/hybridParticle/: Makefile  hybridParticle.tex
doc/imc/: imc.mdl  no_cen_adj_7799.tex
doc/imctest/: IMC.bib  abstract.tex  builder.tex  coord_sys-int.cfg  host_build.eps  host_build.fig  imc-dev.ps  imc-dev.tex  imc.sty  imc_build.eps  imc_build.fig  intro.tex  layout-int.cfg  makefile  mt.tex  opacity_builder-int.cfg  os_builder-int.cfg  os_mesh-int.cfg  os_mesh-rint.cfg  os_mesh.eps  os_mesh.fig  overview.tex  particle-int.cfg  trans.eps  trans.fig  trans.tex  trans_parallel.eps  trans_parallel.fig  xycoord-sys-int.cfg  xycoord_sys-int.cfg  xyzcoord-sys-int.cfg  xyzcoord_sys-int.cfg
doc/matprops/: MultiMaterialCell.tex
doc/mesh/: Expression.tex  MTConcept.tex
doc/numdiff/: tstNumdiff
doc/purify/: 98099.tex
doc/refactor_VisScope/: refactor_VisScope.ps  refactor_VisScope.tex
doc/refactor_planning/: refactor_planning.ps  refactor_planning.tex
doc/release/: AB.eps  AB.fig  Makefile  branch.eps  branch.fig  draco-release.tex  drelease.dot  drelease.eps  tag-strategy.eps  tag-strategy.fig
doc/releases/: Makefile  draco-3_0_0.tex  draco-3_2_0.tex  draco-4_0_0.tex  draco-5_0_0.tex  draco-6_0_0.tex
doc/reorganization_VisScope/: draco_reorg.ps  draco_reorg.tex
doc/system/: rn98046.tex
src/: CMakeLists.txt  Makefile.in  SConstruct  aclocal.m4  configure  configure.ac  configure.in  makefile  wipenv
src/3T/: CrossSectionMapper.hh  Diffusion_DB.cc  Diffusion_DB.hh  Diffusion_P1.cc  Diffusion_P1.hh  Diffusion_P1.pt  Diffusion_XYZ.cc  Diffusion_XYZ.hh  Diffusion_XYZ.pt  MatVec_3T.cc  MatVec_3T.hh  MatVec_3T.pt  OpCrossSectionMapper.hh  P13T.cc  P13T.hh  P13T.t.cc  P13TOptions.hh  P13T_Mesh_XYZ_pt.cc  P1Coeffs.hh  P1Coeffs.t.cc  PhysicalConstants.hh  PreCond.cc  PreCond.hh  PreCond.pt  RadiationPhysics.cc  RadiationPhysics.hh  Units.cc  Units.hh  diffusion.nml  makefile
src/ACE_Format_Reader/: ACE_Format_Reader.cc  CMakeLists.txt
src/ConjGrad/: C4Reduction.hh  ConjGrad.hh  ConjGradTraits.hh  DefaultConvCrit.hh  DefaultScalarMultiplies.hh  NoPrecon.hh  Release.cc  Release.hh  SerialReduction.hh  config.h.in  configure  configure.in
src/ConjGradDiffusionSolver/: MatVecP1Diff.hh  MatrixP1Diff.hh  MatrixP1DiffTraits.hh  PreCondP1Diff.hh  Release.cc  Release.hh  SolverP1Diff.hh  config.h.in  configure  configure.in
src/LAMG/: CompressedRowStorage.hh  DynamicCompRowStorage.cc  DynamicCompRowStorage.hh  LAMG_F90.hh  Options.hh  Release.cc  Release.hh  Solver.cc  Solver.hh  c2f.h  config.h.in  configure  configure.in  stubs.cc
src/LAMGDiffusionSolver/: MatrixP1Diff.cc  MatrixP1Diff.hh  MatrixP1DiffTraits.hh  PreComputedState.cc  PreComputedState.hh  PreComputedState.t.hh  Release.cc  Release.hh  SolverP1Diff.hh  config.h.in  configure  configure.in
src/P1Diffusion/: DiffusionSelector.hh  MatVecP1Diff.cc  MatVecP1Diff.hh  MatVecP1Diff.t.cc  MatVecP1Diff.t.hh  MatVecP1Diff_pt.cc  MatrixP1Diff.hh  MatrixP1Diff.t.cc  MatrixP1Diff.t.hh  MatrixP1DiffTraits.hh  MatrixP1Diff_pt.cc  P1Diffusion.hh  P1Diffusion.t.cc  P1Diffusion.t.hh  P1Diffusion_pt.cc  P1Matrix.hh  P1Momentum.hh  P1Momentum.t.hh  PreCondP1Diff.hh  PreCondP1Diff.t.cc  PreCondP1Diff.t.hh  PreCondP1Diff_pt.cc  Release.cc  Release.hh  SolverP1Diff.hh  SolverP1Diff.t.cc  SolverP1Diff.t.hh  SolverP1Diff_pt.cc  config.h.in  configure  configure.in  makefile
src/PCGDiffusionSolver/: MatVecP1Diff.hh  MatVecP1Diff.t.hh  MatrixP1Diff.hh  MatrixP1Diff.t.hh  MatrixP1DiffTraits.hh  PreCondP1Diff.hh  PreCondP1Diff.t.hh  Release.cc  Release.hh  SolverP1Diff.hh  SolverP1Diff.t.hh  config.h.in  configure  configure.in  pcg.nml  pcg_DB.cc  pcg_DB.hh
src/POOMA_MT/: Makefile.POOMA.in  Makefile.misc  PoomaAssign_pt.cc  PoomaAssign_pt.hh  PoomaBinary_pt.cc  (+16 more)
tools/: C_loc  Makefile.in  Utils.py  aclocal.m4  apptest_modules.py  ats2-env.sh  ats2-release.sh  basename_loc  build_ccs4_release  check_coverage.in  check_for_tags.py  checkout  checkout.py  collate_cycle_edits_from_milagro_output.py  common.sh  configure  configure.ac  configure.in  count_loc.sh  darwin-arm-env.sh  darwin-power9-env.sh  darwin-x86_64-env.sh  draco  draco.in  find_tags.py  find_tags_diff.py  fixNames.py  fixdeps  get_include_tree.sh  include_tree.py  inst.pt  instantialyzer  launchtest  launchtest.in  nmlgen  numdiff.py  package_depends.py  package_reuse.sh  partisn.py  perstalyzer  (+13 more)
(+2722 files in other folders)
