dnl-------------------------------------------------------------------------dnl
dnl draco/ configure.in
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for draco/
dnl-------------------------------------------------------------------------dnl

AC_INIT(README.draco)
AC_CONFIG_AUX_DIR(config)

AC_ALL_VENDORS_SETUP
AC_DRACO_ARGS

# The order of packages in AC_CONFIG_SUBDIRS **is** important.
# The packages may depend on other packages to the left of them
# in the list.

AC_CONFIG_SUBDIRS(autodoc tools src doc)

# check for configure
AC_CHECK_PROG(AUTOCONF, autoconf, autoconf, null)
if test "${AUTOCONF}" = null ; then
   AC_MSG_ERROR("Cannot find autoconf; cannot build configure scripts!")
fi

CURRENT_DIR=`pwd`

# build configure scripts in subdirs
for dir in $subdirs
   do
       if test -d ${srcdir}/${dir} ; then
	   AC_MSG_CHECKING("configure in ${srcdir}/${dir}")
	   cd $srcdir/$dir
	   if test -f configure ; then 
	       AC_MSG_RESULT("exists")
	   else
	       ${AUTOCONF} --localdir=../config
	       AC_MSG_RESULT("built")
	   fi
	   cd $CURRENT_DIR
       fi
   done 

AC_OUTPUT(Makefile)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/ configure.in
dnl-------------------------------------------------------------------------dnl
