gdnl-------------------------------------------------------------------------dnl
dnl draco/ configure.in
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for draco/
dnl-------------------------------------------------------------------------dnl

AC_INIT(README.draco)
AC_CONFIG_AUX_DIR(config)

AC_ALL_VENDORS_SETUP
AC_DRACO_ARGS

# find common tools
AC_CHECK_TOOLS

# define fortran
AC_WITH_F90

# The order of packages in AC_CONFIG_SUBDIRS **is** important.
# The packages may depend on other packages to the left of them
# in the list.

AC_CONFIG_SUBDIRS(tools src autodoc)

AC_BUILD_CONFIGURES(.)

AC_OUTPUT(Makefile)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/ configure.in
dnl-------------------------------------------------------------------------dnl
