dnl-------------------------------------------------------------------------dnl
dnl draco/src/autodoc configure.in
dnl Thomas M. Evans
dnl Fri Sep  3 13:04:05 1999
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for autodoc
dnl-------------------------------------------------------------------------dnl

AC_INIT(doxygen_config.in)
AC_CONFIG_AUX_DIR(../config)

dnl
dnl doxygen setup
dnl

# check for and as sign the path to doxygen
AC_PATH_PROG(DOXYGEN_PATH, doxygen, null)   

# path to package directories which are sources for doxygen
doxygen_src=${srcdir}/../src

# find sources
dirs=`ls ../src`

doxygen_input=''
doxygen_examples=''

for dir in $dirs;
do
   if test -d ../src/$dir ; then
       doxygen_input="${doxygen_src}/${dir} ${doxygen_input}"
       doxygen_examples="${doxygen_src}/${dir}/test ${doxygen_examples}"
   fi
done

# check if we should build latex sources
latex_yes_no='NO'
if test "${enable_latex_doc:=no}" = yes ; then
   latex_yes_no='YES'
fi

# find the release number
number=`${prefix}/bin/draco --version`

AC_SUBST(doxygen_input)
AC_SUBST(doxygen_examples)
AC_SUBST(latex_yes_no)
AC_SUBST(number)

AC_OUTPUT(Makefile doxygen_config header.html footer.html)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/autodoc configure.in
dnl-------------------------------------------------------------------------dnl
