dnl-------------------------------------------------------------------------dnl
dnl draco/doc configure.in
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for draco/doc/
dnl-------------------------------------------------------------------------dnl

AC_INIT(Makefile.in)
AC_CONFIG_AUX_DIR(../config)

AC_ALL_VENDORS_SETUP
AC_DRACO_ARGS

AC_CONFIG_SUBDIRS(ExpEngineTraits MatrixFactory)

AC_BUILD_CONFIGURES(..)

AC_OUTPUT(Makefile)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/doc/ configure.in
dnl-------------------------------------------------------------------------dnl