dnl-------------------------------------------------------------------------dnl
dnl draco/src configure.in
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for draco/src/
dnl-------------------------------------------------------------------------dnl

AC_INIT(Makefile.in)
AC_CONFIG_AUX_DIR(../config)

AC_ALL_VENDORS_SETUP
AC_DRACO_ARGS

# The order of packages in AC_CONFIG_SUBDIRS **is** important.
# Each AC_CONFIG_SUBDIRS corresponds to a level, level 1 at the
# top -> level 5 at the bottom.  On each level the ordering is
# NOT important with the exception of mesh (mesh is need for the
# radphys test suite)

AC_CONFIG_SUBDIRS(ds++ xm fourier stdheaders)
AC_CONFIG_SUBDIRS(UnitTestFrame)
AC_CONFIG_SUBDIRS(traits units nml c4 rng meshReaders)
AC_CONFIG_SUBDIRS(stopwatch meshTest viz RTT_Format_Reader \
                  quadrature cdi)
AC_CONFIG_SUBDIRS(mesh POOMA_MT radphys linalg LAMG ConjGrad diffusion \
                  timestep cdi_gandolf cdi_eospac mc)
AC_CONFIG_SUBDIRS(imc matprops PCGDiffusionSolver LAMGDiffusionSolver \
                  ConjGradDiffusionSolver meshReaders_Services)
AC_CONFIG_SUBDIRS(P1Diffusion)

# check for configure
AC_CHECK_PROG(AUTOCONF, autoconf, autoconf, null)
if test "${AUTOCONF}" = null ; then
   AC_MSG_ERROR("Cannot find autoconf; cannot build configure scripts!")
fi

CURRENT_DIR=`pwd`

# build configure scripts in subdirs
for dir in $subdirs
   do
       if test -d ${srcdir}/${dir} ; then
	   AC_MSG_CHECKING("configure in ${srcdir}/${dir}")
	   cd $srcdir/$dir
	   if test -f configure ; then 
	       AC_MSG_RESULT("exists")
	   else
	       ${AUTOCONF} --localdir=../../config
	       AC_MSG_RESULT("built")
	   fi
	   cd $CURRENT_DIR
       fi
   done 

AC_OUTPUT(Makefile)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/ configure.in
dnl-------------------------------------------------------------------------dnl
