dnl-------------------------------------------------------------------------dnl
dnl draco/src configure.in
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for draco/src/
dnl-------------------------------------------------------------------------dnl

AC_INIT(Makefile.in)
AC_CONFIG_AUX_DIR(../config)

AC_ALL_VENDORS_SETUP
AC_DRACO_ARGS

# The order of packages in AC_CONFIG_SUBDIRS **is** important.  Each
# AC_CONFIG_SUBDIRS corresponds to a level, level 1 at the top ->
# level 6 at the bottom.  On each level the ordering is NOT
# important. See draco/doc/design/level.ps for a visualization of the
# levelization diagram

##---------------------------------------------------------------------------##
## LEVEL 1
##---------------------------------------------------------------------------##

AC_CONFIG_SUBDIRS(stdheaders ds++)

##---------------------------------------------------------------------------##
## LEVEL 2
##---------------------------------------------------------------------------##

AC_CONFIG_SUBDIRS(xm rng c4 units traits cdi meshReaders quadrature)

##---------------------------------------------------------------------------##
## LEVEL 3
##---------------------------------------------------------------------------##

AC_CONFIG_SUBDIRS(timestep pcgWrap stopwatch radphys viz cdi_eospac \
                  cdi_gandolf cdi_analytic RTT_Format_Reader)

##---------------------------------------------------------------------------##
## LEVEL 4
##---------------------------------------------------------------------------##

AC_CONFIG_SUBDIRS(mc meshReaders_Services)

##---------------------------------------------------------------------------##
## LEVEL 5
##---------------------------------------------------------------------------##

AC_CONFIG_SUBDIRS(imc)

##---------------------------------------------------------------------------##
## build the src/pkg configure scripts
## (this must be done after the AC_CONFIG_SUBDIRS calls)
##---------------------------------------------------------------------------##

AC_BUILD_CONFIGURES(..)

AC_OUTPUT(Makefile)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/ configure.in
dnl-------------------------------------------------------------------------dnl
