##---------------------------------------------------------------------------##
## draco/tools/configure.in
## $Id$
##---------------------------------------------------------------------------##

AC_INIT(launchtest)
AC_CONFIG_AUX_DIR(../config)
AC_DRACO_ARGS

AC_PROG_INSTALL

installdirs='${libexecdir} ${bindir}'

# required tools for draco build system testing framework
libexec_files="\${libexecdir}/launchtest"
libexec_files="\${libexecdir}/test_filter.py ${libexec_files}"

# draco information script
bin_files='${bindir}/draco'

# useful utilities that we install
bin_files="\${bindir}/count_loc.sh ${bin_files}"
bin_files="\${bindir}/find_tags.py ${bin_files}"
bin_files="\${bindir}/include_tree.py ${bin_files}"
bin_files="\${bindir}/package_depends.py ${bin_files}"
bin_files="\${bindir}/regression_filter.py ${bin_files}"

installfiles="$libexec_files $bin_files"

AC_SUBST(installdirs)
AC_SUBST(installfiles)

AC_OUTPUT(Makefile draco)

##---------------------------------------------------------------------------##
## end of configure.in
##---------------------------------------------------------------------------##

