dnl-------------------------------------------------------------------------dnl
dnl draco/src/ConjGrad configure.in
dnl Randy M. Roberts
dnl Mon Apr 24 08:14:47 2000
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for ConjGrad
dnl-------------------------------------------------------------------------dnl

AC_INIT(ConjGrad.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(ConjGrad/config.h:config.h.in)
package="ConjGrad"

dnl VENDOR SETUPS
AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
AC_NEEDS_LIBS(traits c4 ds++)
AC_NEEDS_LIBS_TEST(UnitTestFrame)

AC_RUNTESTS(TestConjGrad, 1 2 5)

dnl DRACO SETUP
AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/ConjGrad configure.in
dnl-------------------------------------------------------------------------dnl
