dnl-------------------------------------------------------------------------dnl
dnl draco/src/ConjGradDiffusionSolver configure.in
dnl Randy M. Roberts
dnl Mon Apr 24 15:22:40 2000
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for ConjGradDiffusionSolver
dnl-------------------------------------------------------------------------dnl

AC_INIT(SolverP1Diff.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(ConjGradDiffusionSolver/config.h:config.h.in)
package="ConjGradDiffusionSolver"

dnl VENDOR SETUPS
AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB

AC_NEEDS_LIBS(ConjGrad c4 ds++)
AC_NEEDS_LIBS_TEST(mesh diffusion nml UnitTestFrame)

AC_RUNTESTS(TestConjGradDiffusionSolver, 1 2)

dnl DRACO SETUP
AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in \
test/testConjGradDiffusionSolver.in:test/testConjGradDiffusionSolver.in.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/ConjGradDiffusionSolver configure.in
dnl-------------------------------------------------------------------------dnl
