dnl-------------------------------------------------------------------------dnl
dnl draco/src/LAMG configure.in
dnl Randy M. Roberts
dnl Tue Jan 25 09:43:01 2000
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for LAMG
dnl-------------------------------------------------------------------------dnl

AC_INIT(Solver.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(LAMG/config.h:config.h.in)
package="LAMG"

dnl VENDOR SETUPS
AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
AC_NEEDS_LIBS(ds++)
AC_NEEDS_LIBS_TEST(c4)

AC_RUNTESTS(testSolver, 1 2 5)

dnl DRACO SETUP
AC_DRACO_ENV

dnl Guess at the size of an F90 integer, for now.
AC_DEFINE(RTT_F90_INTEGER, long int)
AC_DEFINE(RTT_F90_DOUBLE, double)
AC_DEFINE(CCALLSFSUB_METHOD, CCALLSFSUB_PREFIX)
AC_DEFINE(CCALLSFSUB_CASE, CCALLSFSUB_UPPER)

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/LAMG configure.in
dnl-------------------------------------------------------------------------dnl
