dnl-------------------------------------------------------------------------dnl
dnl draco/src/LAMGDiffusionSolver configure.in
dnl Randy M. Roberts
dnl Mon Jan 10 15:40:00 2000
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for LAMGDiffusionSolver
dnl-------------------------------------------------------------------------dnl

AC_INIT(MatrixP1DiffTraits.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(LAMGDiffusionSolver/config.h:config.h.in)
package="LAMGDiffusionSolver"

dnl VENDOR SETUPS
AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
AC_NEEDS_LIBS(c4 ds++ LAMG)
AC_NEEDS_LIBS_TEST(mesh nml diffusion)

AC_RUNTESTS(testMatrixGen testSolver, 1 2 5)

dnl DRACO SETUP
AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in \
	  test/test.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/LAMGDiffusionSolver configure.in
dnl-------------------------------------------------------------------------dnl
