dnl-------------------------------------------------------------------------dnl
dnl draco/src/P1Diffusion configure.in
dnl Randy M. Roberts
dnl 
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for P1Diffusion
dnl-------------------------------------------------------------------------dnl
dnl $Id$
dnl-------------------------------------------------------------------------dnl

AC_INIT(P1Diffusion.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(P1Diffusion/config.h:config.h.in)
package="P1Diffusion"

AC_INSTALL_HEADERS
AC_INSTALL_LIB

dnl No longer any libs to install
dnl AC_INSTALL_LIB

dnl AC_NEEDS_LIBS(xxx)
AC_NEEDS_LIBS_TEST(mesh diffusion nml c4 ds++)

AC_MSG_CHECKING([for diffusion solver package])
if test "${enable_pcglib:=no}" != no
then
  AC_MSG_RESULT([PCGDiffusionSolver])
  AC_PCGLIB_SETUP(test)
  AC_DEFINE(SELECTOR_PCG_TEST)
  AC_NEEDS_LIBS_TEST(PCGDiffusionSolver linalg)
else
  AC_MSG_RESULT([ConjGradDiffusionSolver])
  AC_DEFINE(SELECTOR_CONJGRAD_TEST)
  AC_NEEDS_LIBS_TEST(ConjGrad)
fi

AC_MPI_SETUP(pkg)
AC_SHMEM_SETUP(pkg)

AC_RUNTESTS(testP1Diffusion, 1 2)

AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
test/Makefile:../../config/Makefile.test.in \
test/testP1Diffusion.in:test/testP1Diffusion.in.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/P1Diffusion configure.in
dnl-------------------------------------------------------------------------dnl
