dnl-------------------------------------------------------------------------dnl
dnl draco/src/PCGDiffusionSolver configure.in
dnl Randy M. Roberts
dnl 
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for PCGDiffusionSolver
dnl-------------------------------------------------------------------------dnl
dnl $Id$
dnl-------------------------------------------------------------------------dnl

AC_INIT(SolverP1Diff.hh)
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(PCGDiffusionSolver/config.h:config.h.in)
package="PCGDiffusionSolver"

AC_INSTALL_HEADERS
AC_INSTALL_LIB

dnl No longer any libs to install
dnl AC_INSTALL_LIB

AC_NEEDS_LIBS(linalg c4 ds++)
AC_NEEDS_LIBS_TEST(mesh diffusion nml)

AC_PCGLIB_SETUP(pkg)
AC_MPI_SETUP(pkg)
AC_SHMEM_SETUP(pkg)

AC_RUNTESTS(testPCGDiffusionSolver, 1 2)

AC_DRACO_ENV

AC_OUTPUT(Makefile:../../config/Makefile.package.in \
test/Makefile:../../config/Makefile.test.in \
test/testPCGDiffusionSolver.in:test/testPCGDiffusionSolver.in.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/PCGDiffusionSolver configure.in
dnl-------------------------------------------------------------------------dnl
