dnl-------------------------------------------------------------------------dnl
dnl draco/src/POOMA_MT configure.in
dnl Randy M. Roberts
dnl Sun Aug 22 08:26:11 1999
dnl $Id$
dnl-------------------------------------------------------------------------dnl
dnl @> configure.in for POOMA_MT
dnl-------------------------------------------------------------------------dnl

AC_INIT()
AC_CONFIG_AUX_DIR(../../config)
AC_CONFIG_HEADER(POOMA_MT/config.h:config.h.in)
package="POOMA_MT"

dnl VENDOR SETUPS
AC_MPI_SETUP(pkg)
dnl AC_SHMEM_SETUP(pkg)
dnl AC_SPRNG_SETUP(pkg)
dnl AC_PCGLIB_SETUP(pkg)

AC_INSTALL_HEADERS
AC_INSTALL_LIB
dnl AC_NEEDS_LIBS(ds++)

dnl DRACO SETUP
AC_DRACO_ENV

AC_ARG_WITH(pooma,
      [  --with-pooma=[POOMA_ARCH] \${POOMA_ARCH} by default])

if test "${with_pooma:=no}" = yes ; then 
   with_pooma="$POOMA_ARCH"
elif test "${with_pooma}" = no ; then
   echo "Must set --with-pooma and --with-pooma-root"
   exit 1
fi

POOMA_ARCH="${with_pooma}"

AC_WITH_DIR(pooma-root, POOMA_ROOT, \${POOMA_ROOT},
            [tell where POOMA is])

if test "${with_pooma_root:=no}" = no ; then
   echo "Must set --with-pooma and --with-pooma-root"
   exit 1
fi

AC_SUBST(POOMA_ROOT)dnl
AC_SUBST(POOMA_ARCH)dnl

AC_OUTPUT(Makefile.POOMA \
          Makefile:../../config/Makefile.package.in \
          test/Makefile:../../config/Makefile.test.in)

dnl-------------------------------------------------------------------------dnl
dnl			 end of draco/src/POOMA_MT configure.in
dnl-------------------------------------------------------------------------dnl
